# ham

./: AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: test.yml
crates/ham/: Cargo.toml
crates/ham/src/: lib.rs  main.rs
crates/ham/tests/fixtures/: ziptest.happ
crates/hc_connect/: Cargo.toml
crates/hc_connect/src/: admin_ws.rs  app_ws.rs  lib.rs
crates/holochain_env_setup/: Cargo.toml  README.md
crates/holochain_env_setup/src/: environment.rs  holochain.rs  lair.rs  lib.rs  storage_helpers.rs
crates/holochain_env_setup/src/taskgroup_manager/: task_group_wrappers.rs
src/: client.rs  errors.rs  lib.rs  reconnect.rs  shutdown.rs
