 [workspace]
resolver = "2"

members = [
  "crates/hc_connect",
  "crates/holochain_env_setup",
]

[workspace.dependencies]
holochain_keystore = "0.4.1"
holochain_types = "0.4.1"
holochain_conductor_api = "0.4.1"
lair_keystore_api = "0.5.3"
holochain_websocket = "0.4.1"
holofuel_types = "0.5.13"
sodoken = "0.0.11"
serde = { version = "1.0", features = ["derive", "rc"] } 
rmp-serde = "1.1.1"
mr_bundle = { version = "0.4.1" }
reqwest = { version = "0.12.4", features = ["json"]}

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
