[package]
name = "ham"
version = "0.1.0"
edition = "2021"
description = "Holochain App Manager - Simple app installation utility"

[dependencies]
anyhow = "1.0"
holochain_conductor_api = { workspace = true }
holochain_types = { workspace = true }
holochain_client = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = "0.3"

[dev-dependencies]
holochain_env_setup = { path = "../holochain_env_setup" }
tempfile = "3.1"
tracing-subscriber = "0.3"
