[package]
name = "holochain_env_setup"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmaail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
one_err = "0.0.8"
url2 = "0.0.6"
log = "0.4.17"
holochain_keystore = { workspace = true }
holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }
lair_keystore_api = { workspace = true }
lazy_static = "1"
isahc = "1.7.2"
snafu = "0.8.5"
serde = { workspace = true }
serde_yaml = "0.9"
dotenv = "0.15.0"
tempfile = "3.1"
sodoken = { workspace = true }
reqwest = { workspace = true }
tracing = { version = "0.1", features = ["attributes"] }
task-group = "0.2.1"
futures = "0.3.17"
nix = { version = "0.29.0", features = ["signal"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
holochain_client = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"

[dev-dependencies]
tempfile = "3.1"
tracing-subscriber = "0.3"
